# rehearsal-track-markers

./: .gitignore  app_spec.md  plan.md  pyproject.toml  requirements.txt  widget.py
rehearsal_track_markers/: __init__.py  app_controller.py
rehearsal_track_markers/audio/: __init__.py  audio_file_manager.py  audio_player.py
rehearsal_track_markers/models/: __init__.py  marker.py  show.py  track.py
rehearsal_track_markers/persistence/: __init__.py  file_manager.py  show_repository.py
rehearsal_track_markers/ui/: __init__.py  dialogs.py  main_window.py  marker_list.py  marker_progress_bar.py  playback_controls.py  track_sidebar.py  welcome_screen.py
rehearsal_track_markers/utils/: __init__.py  logging_config.py
tests/: __init__.py  test_audio.py  test_models.py  test_persistence.py  test_ui.py
