[project]
name = "PySide Project"
requires-python = ">=3.13"

[tool.pyside6-project]
files = [
    "widget.py",
    "rehearsal_track_markers/__init__.py",
    "rehearsal_track_markers/app_controller.py",
    "rehearsal_track_markers/models/__init__.py",
    "rehearsal_track_markers/models/marker.py",
    "rehearsal_track_markers/models/track.py",
    "rehearsal_track_markers/models/show.py",
    "rehearsal_track_markers/persistence/__init__.py",
    "rehearsal_track_markers/persistence/file_manager.py",
    "rehearsal_track_markers/persistence/show_repository.py",
    "rehearsal_track_markers/audio/__init__.py",
    "rehearsal_track_markers/audio/audio_file_manager.py",
    "rehearsal_track_markers/audio/audio_player.py",
    "rehearsal_track_markers/ui/__init__.py",
    "rehearsal_track_markers/ui/main_window.py",
    "rehearsal_track_markers/ui/track_sidebar.py",
    "rehearsal_track_markers/ui/playback_controls.py",
    "rehearsal_track_markers/ui/marker_list.py",
    "rehearsal_track_markers/ui/marker_progress_bar.py",
    "rehearsal_track_markers/ui/dialogs.py",
    "rehearsal_track_markers/utils/__init__.py",
    "rehearsal_track_markers/utils/logging_config.py",
    "tests/__init__.py",
    "tests/test_models.py",
    "tests/test_persistence.py",
    "tests/test_audio.py",
    "tests/test_ui.py"
]
